--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "localforage": "^1.10.0",
     "match-sorter": "^8.1.0",
+    "prop-types": "^15.8.1",
+    "pure-react-carousel": "^1.32.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
-    "sort-by": "^1.2.0"
+    "react-slideshow-image": "^4.3.2",
+    "react-stars": "^2.2.5",
+    "sort-by": "^1.2.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
