--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "firebase": "^12.0.0",
+    "framer-motion": "^12.23.12",
     "localforage": "^1.10.0",
     "match-sorter": "^8.1.0",
     "prop-types": "^15.8.1",
     "pure-react-carousel": "^1.32.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
+    "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0",
     "tailwindcss": "^4.1.11"
   },
