--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "pure-react-carousel": "^1.32.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
+    "react-tabs": "^6.1.0",
     "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0",
     "tailwindcss": "^4.1.11"
