--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.84.1",
+    "axios": "^1.11.0",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.12",
     "localforage": "^1.10.0",
