--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "localforage": "^1.10.0",
     "match-sorter": "^8.1.0",
     "prop-types": "^15.8.1",
-    "pure-react-carousel": "^1.32.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -22,6 +21,7 @@
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
     "sort-by": "^1.2.0",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
