--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
