--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "axios": "^1.11.0",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.12",
+    "icons": "^1.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.1.0",
     "prop-types": "^15.8.1",
     "pure-react-carousel": "^1.32.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
@@ -30,6 +31,7 @@
     "react-tabs": "^6.1.0",
     "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.22.3",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
