--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
+    "react-stars": "^2.2.5",
     "react-tabs": "^6.1.0",
     "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0",
