--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-stars": "^2.2.5",
     "react-tabs": "^6.1.0",
     "react-type-animation": "^3.2.0",
+    "recharts": "^3.1.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.22.3",
     "swiper": "^11.2.10",
